--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "firebase": "^10.4.0",
     "formik": "^2.4.5",
     "next": "13.4.19",
+    "pexels": "^1.4.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
