--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "yup": "^1.2.0"
   }
