--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "firebase": "^10.4.0",
     "formik": "^2.4.5",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "pexels": "^1.4.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.8",
